# logc

./: CMakeLists.txt
example/: basic.c
include/: logc.h  modlogc.h
src/: env.c  header.c  logger.c  logger.h  stdlog.c  write.c
